--- a/CSS/tabla.css
+++ b/CSS/tabla.css
@@ -4,15 +4,15 @@ header{  /*Cabezera de decoracion */
     margin: -15px -15px 40px -15px;
 }
 
-#tabla{  /*Cuadro en general para el cuerpo*/
-    margin-left: 10%;
+h1{  /*Cuadro en general para el cuerpo*/
+    margin-left: 5%;
     color: red;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 15px;
+    font-size: 35px;
 }
 
 #los{ /*Cuadro de texto unico*/
-    margin-left: 40px;
+    margin-left: 80px;
     font-size: 20px;
 }
 #lik{   /*Boton*/
